--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "three": "^0.179.1",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "web-ifc": "^0.0.70"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
