--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@heroui/link": "2.2.21",
     "@heroui/listbox": "2.3.23",
     "@heroui/navbar": "2.2.22",
+    "@heroui/react": "^2.8.2",
     "@heroui/snippet": "2.2.25",
     "@heroui/switch": "2.2.22",
     "@heroui/system": "2.4.20",
@@ -27,6 +28,7 @@
     "clsx": "2.1.1",
     "framer-motion": "11.18.2",
     "intl-messageformat": "10.7.16",
+    "lucide-react": "^0.540.0",
     "next": "15.3.1",
     "next-themes": "0.4.6",
     "react": "18.3.1",
