--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@react-aria/visually-hidden": "3.8.26",
     "@thatopen/components": "^3.1.2",
     "@thatopen/components-front": "^3.1.6",
+    "@thatopen/ui": "^3.1.1",
+    "@thatopen/ui-obc": "^3.1.3",
     "clsx": "2.1.1",
     "framer-motion": "11.18.2",
     "intl-messageformat": "10.7.16",
