--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@react-aria/visually-hidden": "3.8.26",
     "@thatopen/components": "^3.1.2",
     "@thatopen/components-front": "^3.1.6",
+    "@thatopen/fragments": "^3.1.7",
     "@thatopen/ui": "^3.1.1",
     "@thatopen/ui-obc": "^3.1.3",
     "clsx": "2.1.1",
@@ -35,7 +36,8 @@
     "next-themes": "0.4.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "three": "^0.179.1"
+    "three": "^0.179.1",
+    "web-ifc": "^0.0.71"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "15.3.4",
